--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,15 +52,25 @@ jobs:
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
-  # Job 3: Security scan (optional)
-  security:
+  # Job 3: Code quality check
+  lint:
     runs-on: ubuntu-latest
-    needs: test
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
     
-    - name: Run security scan
-      uses: pyupio/safety@v1.10.3
-      continue-on-error: true  # Don't fail the build on security warnings
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.12'
+    
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
+    
+    - name: Install dependencies
+      run: uv sync --all-extras
+    
+    - name: Run Ruff linter
+      run: uv run ruff check . --output-format=github
+      continue-on-error: true
